Fix RAG app: Update to Gemini 2.5 Flash, fix LangChain imports, use LCEL

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 langchain
 langchain-community
-langchain-huggingface
+langchain-core
 langchain-google-genai
+langchain-huggingface
 faiss-cpu
 streamlit
 pypdf
